# CloverNet-

./: .gitignore  CMakeLists.txt  README.md  main.c
header/: basic_nn.h
source/: basic_nn.c
